[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/trainer_benedikt.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/characters/player.png" id="2_sprite"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_idle_right"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_walk_right"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_RESET"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_trainer"]
_data = {
"RESET": SubResource("Animation_RESET"),
"idle_right": SubResource("Animation_idle_right"),
"walk_right": SubResource("Animation_walk_right")
}

[node name="TrainerBenedikt" type="CharacterBody2D"]
script = ExtResource("1_script")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture = ExtResource("2_sprite")
hframes = 4
vframes = 4
frame = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_trainer")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_body")

[node name="SightLine" type="Area2D" parent="."]

[node name="SightCollision" type="CollisionShape2D" parent="SightLine"]

[node name="ExclamationMark" type="Label" parent="."]
offset_left = -10.0
offset_top = -40.0
offset_right = 10.0
offset_bottom = -20.0
text = "!"
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
visible = false